@@ -3,6 +3,7 @@ Version 4.0.3
 - Fixed incorrect string comparisons in C library
 - Fixed incorrect type inference in Spin functions which contain cases
 - Fixed an uninitialized variable problem with some large programs
+- Made sure case_fast actually does produce a jump table
 
 Version 4.0.2
 - Fixed Spin quit inside of case
